Overflow fixed again by 150 to 100

--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -727,7 +727,7 @@ pre code {
 .col-xl,
 .col-xl-auto {
   position: relative;
-  width: 150%;
+  width: 100%;
   min-height: 1px;
   padding-right: 15px;
   padding-left: 15px;
